--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
         <title>
             This is my App!
         </title>
+        <body>
+            This is my body, and i get to do what i want with it.
+        </body>
     </head>
-</html>
+</html> 
