--- a/paper.html
+++ b/paper.html
@@ -1,2 +1,5 @@
-this is a test.
-adding some toilet papers. adding a change to the login branch.
+shopping list
+1) cherries
+2) mango
+3) passionfruit
+
